# IVS-project_2

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  calculator.desktop  hodnoceni.txt  odevzdani.txt  skutecnost.txt  stddev.desktop  xkrivka00_xsemerv00_xjanotf00_260514_plan.txt
.github/workflows/: cpp-tests.yml
cmake/: Toolchain-mingw64.cmake
profiling/: gprof_output_10.txt  gprof_output_1000.txt  gprof_output_1000000.txt  zprava.txt
src/: Makefile  exe_script.sh  mathlib.h
src/calculator/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/profiling/: 10.txt  1000.txt  1000000.txt  CMakeLists.txt  Makefile  stddev.cpp
src/tests/: CMakeLists.txt  tests.cpp
